--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="nav-arrow"></span>
                     <ul class="nav-dropdown">
                         <li><a href="https://www.behance.net/ishanth">Designing</a></li>
-                        <li><a href="#service">Development</a></li>
+                        <li><a href="https://github.com/ishanth46">Development</a></li>
                         <li><a href="https://photos.app.goo.gl/VX7mu8jnwx4aRbdo8">Photography</a></li>
                     </ul>
                 </li>
