--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <span></span>
                     </span>
                 </a>
-                <a href="https://www.yudiz.com/" class="book-link">
+                <a href="assets/Ishanth_CV.pdf" class="book-link" target="_blank">
                     <span class="linktext">Download Resume</span>
                     <span class="arrow">
                         <span></span>
